[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bebe-build-env"
version = "0.1.0"
description = "Bleeding Edge Build Environment Generator"
authors = [
  { name="Antony Peacock" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Jinja2>=3.0.0"
]

[project.scripts]
bebe = "bebe.cli:main"

[tool.setuptools.package-data]
"bebe" = ["templates/**/*.Dockerfile", "templates/*.Dockerfile"]
